frontend-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendproduct
  labels:
    app: frontendproduct
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontendproduct
  template:
    metadata:
      labels:
        app: frontendproduct
    spec:
      containers:
      - name: frontendproduct
        image: naf007/frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontendproduct
  type: LoadBalancer	
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30042
