order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: product
        image: naf007/orderservice:latest
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3012
      targetPort: 3004
      nodePort: 30012
