ordermongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: mongodb
  name: mongodb-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: mongodb
  template: 
    metadata: 
      labels: 
        app: mongodb
    spec: 
      containers: 
        - 
          image: mongo
          name: mongodb
          ports: 
            - 
              containerPort: 27017
---
apiVersion: v1
kind: Service
metadata: 
  name: mongodb-service
spec: 
  ports: 
    - 
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector: 
    app: mongodb
