ordernew.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: node.js
  name: node-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: node
  template: 
    metadata: 
      labels: 
        app: nodejs
    spec: 
      containers: 
        - 
          image: "ku11/neworderservice:latest"
          name: node
          ports: 
            - 
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata: 
  name: node-service
spec: 
  ports: 
    - 
      port: 3006
      protocol: TCP
      targetPort: 5000
  selector: 
    app: node
  type: LoadBalancer
