productdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  labels:
    app: product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: naf007/product-image:latest
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 3005
      nodePort: 30008
