frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: vsr-kub001-informatik.tu-chemnitz.de
  - http:
      paths:
      - path: /productadmin
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
